--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -11,6 +11,7 @@
 @import "users";
 @import "debates";
 @import "challenges";
+@import "groups";
 @import "doulins";
 @import "arguments";
 @import "comments";
@@ -158,36 +159,39 @@ input.ajust-input, textarea.ajust-input {
 	#debate-badge1{
 		height:128px;
 		width:470px;
-		background-color:#EEE;
-		margin-bottom:30px;
+		background-color:#C9C9C9;
+		margin-bottom:15px;
 		
 		#debate-badge2{
-		padding-left: 20px;
+		padding-left: 30px;
 		padding-top: 40px;
 		}
 		
 		.texte{
 		width:350px;
-		margin-top:8px;
-		margin-left:-20px;
+		margin-top:10px;
+		margin-left:-15px;
 		
 	   	 .title{
 		 width: 300px;
-		 margin-top:-110px;
+		margin-top:-100px;
 		margin-bottom:3px;
-		margin-left:20px;
+		margin-left:25px;
 	   	 text-align: center;
 	   	 font-family:"gotham";
+			
 	   	 font-size:18px;
+			.title2{
 	   	 color:black;
+		}
 			.title:hover{
 				text-decoration: underline;
 			}	
 	   	 }
 	   	 .context{
 			margin-top:10px;
-			width: 310px;
-			margin-left: 20px;
+			width: 300px;
+			margin-left: 25px;
 	   	 	text-align:left;
 	   	 	font-family:"georgia";
 			font-style: italic;
@@ -258,7 +262,7 @@ input.ajust-input, textarea.ajust-input {
 		 }
 		 .image{
 			padding-left:10px;
-			margin-top:-53px;
+			margin-top:-48px;
 		 }
 		}
 }
@@ -267,29 +271,34 @@ input.ajust-input, textarea.ajust-input {
 	#challenge-badge1{
 		height:128px;
 		width:470px;
-		background-color:#EEE;
-		margin-bottom:30px;
+		background-color:#C9C9C9;
+		margin-bottom:15px;
 		
 		#challenge-badge2{
-		padding-left: 20px;
+		padding-left: 30px;
 		padding-top: 40px;
 		}
 		
 		.texte{
 		width:360px;
-		margin-top:8px;
-		margin-left:-20px;
+		margin-top:12px;
+		margin-left:-15px;
+		text-align: center;
 		
 	   	 .title{
-		 width: 340px;
-		 margin:-85px 0px 3px 10px;
+		 width: 260px;
+		 margin:-70px 0px 3px 47px;
 	   	 text-align: center;
 	   	 font-family:"gotham";
 	   	 font-size:18px;
-	   	 color:black;
+	
+			.title2{
+				color:black;
+			}
 			.title:hover{
 				text-decoration: underline;
 			}
+
 	   	 }
 
 		}
@@ -357,7 +366,7 @@ input.ajust-input, textarea.ajust-input {
 		 }
 		 .image{
 			padding-left:10px;
-			margin-top:-53px;
+			margin-top:-48px;
 		 }
 		}
 }
@@ -365,6 +374,7 @@ input.ajust-input, textarea.ajust-input {
 #doulin-badge{
 	width: 570px;
 	float:left;
+	
 	
 	#image-gauche{
 		border:1px solid #000000;
@@ -378,7 +388,7 @@ input.ajust-input, textarea.ajust-input {
 		width:247px;
 		background-color:#000000;
 		margin-left:0px;
-		margin-bottom:30px;
+		margin-bottom:15px;
 		
 			.title{
 			margin: 10px 10px 10px 10px; 
@@ -493,38 +503,9 @@ input.ajust-input, textarea.ajust-input {
 	 }
 	 .image{
 		padding-left:10px;
-		margin-top:-53px;
+		margin-top:-48px;
 	 }
 	}
 }
 
 
-#group-badge{
-	#group-badge1{
-		height:160px;
-		width:500px;
-		background-color:#EEE;
-		margin-bottom:30px;
-		
-		#group-badge2{
-			height:130px;
-			width: 110px;
-			background-color:#3C3C3B;
-			margin-top:15px;
-			margin-bottom:15px;
-			color: #FFF;
-			font-weight: bold;
-		}
-		
-		#title{
-			margin-top:10px;
-		}
-	}
-	
-	#group-badge3{
-		height: 40px;
-		width: 130px;
-		background-color:#3C3C3B;
-		margin-bottom:10px;
-	}
-}
