--- a/app/assets/stylesheets/arguments.css.scss
+++ b/app/assets/stylesheets/arguments.css.scss
@@ -19,7 +19,7 @@
 	}
 	
 	#new-argument3{
-	background-color:#CCC;
+	background-color:#C9C9C9;
 	margin-top:10px;
 	width: 534px;
 	min-height:520px;
@@ -354,7 +354,7 @@
 
 
 	#gris{
-	background-color:#D3D3D3;
+	background-color:#C9C9C9;
 	margin-top:20px;
 	width: 534px;
 	min-height:170px;
