--- a/app/views/shared/_challenge_badge.html.erb
+++ b/app/views/shared/_challenge_badge.html.erb
@@ -8,9 +8,9 @@
 					
 					<div class="span4">
 						<div class="texte">
-							<%= image_tag("text-badge.png", alt: "Moutoners")%>
+							<%= image_tag("text-badge.png", alt: "Moutoners", class: "image")%>
 							<div class="title">
-	    						<%= link_to challenge.title, challenge, class: "title"%>
+	    						<%= link_to challenge.title, challenge, class: "title2"%>
 							</div>
 
 						</div>
