--- a/app/views/shared/_debate_badge.html.erb
+++ b/app/views/shared/_debate_badge.html.erb
@@ -8,9 +8,9 @@
 					
 					<div class="span4">
 						<div class="texte">
-							<%= image_tag("text-badge.png", alt: "Moutoners")%>
+							<%= image_tag("text-badge2.png", alt: "Moutoners")%>
 							<div class="title">
-	    						<%= link_to debate.title, debate, class: "title"%>
+	    						<%= link_to debate.title, debate, class: "title2"%>
 							</div>
 							<div class="context">
 							<%= debate.content %>
