--- a/app/views/static_pages/list.html.erb
+++ b/app/views/static_pages/list.html.erb
@@ -10,7 +10,7 @@
 					</div>
 	
 					<div class="span8" id="list">
-						<%= render "shared/index", :object => @debates %>
+						<%= render "shared/index", :object => @lists %>
 					</div>
 				</div>
 </div>
