--- a/app/views/static_pages/list_challenges.html.erb
+++ b/app/views/static_pages/list_challenges.html.erb
@@ -46,6 +46,33 @@
 			</div>
 		</div>
 	</div>
+
+	<ul class ="row" id ="challenge-header">
+
+			<li class="challenge-bouton">
+				Tous les défis
+			</li>
+
+	  		<li class="tiret">|</li>
+
+			<li class="challenge-bouton">
+				En attente
+			</li>
+
+	    	<li class="tiret">|</li>
+
+			<li class= "challenge-bouton">
+				Brèves
+			</li>
+
+	    	<li class="tiret">|</li>
+
+			<li class="challenge-bouton">
+				<%= link_to "Nouveau défi", new_challenge_path, class: "challenge-bouton"%>
+			</li>
+
+	</ul>
+	
 	
 	<div class="row" id="intro-doulin">
 		<div class="texte">Débats Ouverts pour gens d'esprit</div>
