--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -12,7 +12,7 @@
 	margin-bottom: 30px;
 	
 		.image1{
-		background-color: #EEE;
+		background-color: #C9C9C9;
 		height:222px;
 		width:374px;
 		margin-top:20px;
@@ -20,11 +20,17 @@
 		
 			.image{
 			img { width: 374px; height:222px;}
+				position:relative;
+				z-index: 1;
+			}
+			.image2{
+			margin-top:-244px;
+
 			}
 			
 		#stats2{
 		width:293px;
-		margin-top:-40px;
+		margin-top:-60px;
 		margin-left:43px;
 		
 		.reslutats-oui{
@@ -195,7 +201,7 @@
 		}
 
 		.oui-oui{
-			margin-top: -10px;
+			margin-top: -5px;
 			margin-left:30px;
 			background-color: #808080;
 			font-family: "bebasneue-webfont";
@@ -216,12 +222,12 @@
 		}
 
 		.suisse-suisse{
-			margin-top: -10px;
+			margin-top: -5px;
 			margin-left:8px;
 			background-color: #FF6969;
 			font-family: "bebasneue-webfont";
 			font-size: 25px;
-			padding: 5px 20px 5px 20px;
+			padding: 5px 12px 5px 12px;
 			
 			.suisse{
 			color: white;
@@ -237,7 +243,7 @@
 		}
 		
 		.non-non{
-			margin-top: -10px;
+			margin-top: -5px;
 			margin-left:8px;
 			background-color: #FFF;
 			font-family: "bebasneue-webfont";
@@ -267,8 +273,8 @@
 
 			.image{
 			padding-bottom:5px;
-			margin-left:1px;
-			margin-right: 10px;
+			margin-left:7px;
+			margin-right: 20px;
 			}
 		}
 
@@ -341,7 +347,7 @@
 	 }
 	.image{
 	margin-left:10px;
-	margin-top:-50px;
+	margin-top:-48px;
 	}
 	}
 	
