--- a/app/assets/stylesheets/doulins.css.scss
+++ b/app/assets/stylesheets/doulins.css.scss
@@ -79,6 +79,7 @@
 		margin-right:0px;
 		margin-left: 30px;
 		width: 420px;
+
 				
 		.title3{
 		text-align: left;
@@ -113,72 +114,143 @@
 		}
 		
 		#vote{
-			margin-top:10px;
-			margin-left: 0px;
-			padding-bottom: 10px;
-			border-bottom: 9px solid white;
-	
+		margin-left: 0px;
+		margin-top: 15px;
+		padding-bottom: 10px;
+		border-bottom: 9px solid white;
+		
+		div{
+		display: inline-block;
+		}
 			a:hover{
 			color:#000000;
 			}
-	
-		.pour-first{
-		 	float: left;
-			padding: 7px 15px 10px 15px;
-			font-family:"gotham";
-			font-size:18px;
+
+
+			.moitie-gauche{
+			width:205px;
+			background-color: #808080;
+			height: 35px;
+			font-family: "gotham";
+			font-size: 18px;
 			color: white;
-			background-color:#808080;
-		}
-		
-		.pour-first1{
-		 	float: left;
-			padding: 7px 15px 10px 15px;
-			font-family:"gotham";
-			font-size:18px;
+			text-align: center;
+
+				.rapport-gauche{
+				height:29px;
+				padding: 7px 5px 0px 5px;
+				background-color: white;
+				color: black;
+				font-family: "georgia";
+				font-size: 16px;
+				font-style: italic;
+				font-weight: bold;
+				float: left;
+				}
+				.pour-truc{
+				padding-top: 7px;
+					.pour-first{
+					text-align: center;
+					color: white;
+					
+					}
+				}
+			}
+
+
+			.moitie-gauche1{
+			width:205px;
+			background-color: #AAD0FF;
+			height: 35px;
+			font-family: "gotham";
+			font-size: 18px;
 			color: white;
-			background-color:#AAD0FF;
-		}
-		
-		.rapport-gauche{
-			float: left;
-			padding: 7px 5px 10px 5px;
-			font-family:"georgia";
-			font-size:18px;
-			font-style:italic;
-			font-weight: bold;
-			background-color:#FFF;
-			color: black;
-		}
-		
-		.pour-second{
-		  float: right;
-			padding: 7px 15px 10px 15px;
-			font-family:"gotham";
-			font-size:18px;
+			text-align: center;						
+				.rapport-gauche{
+				height:29px;
+				padding: 7px 5px 0px 5px;
+				background-color: white;
+				color: black;
+				font-family: "georgia";
+				font-size: 16px;
+				font-style: italic;
+				font-weight: bold;
+				float: left;
+				}
+			  .pour-truc{
+			  padding-top: 7px;
+			  	.pour-first{
+			  	text-align: center;
+			  	color: white;
+              
+			  	}
+			  }						
+
+			}
+
+
+			.moitie-droite{
+			float:right;
+			width:205px;
+			background-color: #808080;
+			height: 35px;
+			font-family: "gotham";
+			font-size: 18px;
 			color: white;
-			background-color:#808080;			
-		}
-		
-		.pour-second2{
-		  float: right;
-			padding: 7px 15px 10px 15px;
-			font-family:"gotham";
-			font-size:18px;
+			text-align: center;
+
+				.rapport-droite{
+				height:29px;
+				padding: 7px 5px 0px 5px;
+				background-color: white;
+				color: black;
+				font-family: "georgia";
+				font-size: 16px;
+				font-style: italic;
+				font-weight: bold;
+				float: right;
+				}
+				.pour-truc{
+				padding-top: 7px;
+					.pour-second{
+					text-align: center;
+					color: white;
+					
+					}
+				}
+			}
+
+
+			.moitie-droite1{
+			float:right;
+			width:205px;
+			background-color: #FF6969;
+			height: 35px;
+			font-family: "gotham";
+			font-size: 18px;
 			color: white;
-			background-color:#FF6969;			
-		}
-		
-		.rapport-droite{
-			float: right;
-			padding: 7px 5px 10px 5px;
-			font-family:"georgia";
-			font-size:18px;
-			font-style:italic;
-			font-weight: bold;
-			background-color:#FFF;
-			color: black;		
-		}
+			text-align: center;						
+				.rapport-droite{
+				height:29px;
+				padding: 7px 5px 0px 5px;
+				background-color: white;
+				color: black;
+				font-family: "georgia";
+				font-size: 16px;
+				font-style: italic;
+				font-weight: bold;
+				float: right;
+				}
+			  .pour-truc{
+			  padding-top: 7px;
+			  	.pour-second{
+			  	text-align: center;
+			  	color: white;
+              
+			  	}
+			  }						
+
+			}
 		
 		}
 		
@@ -186,19 +258,21 @@
 		#stats{
 		font-family:"bebasneue-webfont";
 		font-size:28px;
-		margin-left:85px;
-		width:240px;
+		margin-left:70px;
+		width:370px;
 		
 		.stat1{
 			margin-top:10px;
+			margin-bottom: 15px;
+			
 			.image{
 			padding-bottom:5px;
-			margin-left:5px;
-			margin-right: 10px;
+			margin-left:7px;
+			margin-right: 20px;
 			}
 		}
 		.stat2{
-		margin-left: 5px;
+		margin-left: 10px;
 		margin-top: 0px;
 		}
 		}
@@ -265,7 +339,7 @@
 	 }
 	.image{
 	margin-left:10px;
-	margin-top:-55px;
+	margin-top:-48px;
 	}
 	}
 	
