--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -67,7 +67,7 @@ text-align: center;
 			margin-bottom: 5px;
 			margin-top: 5px;
 			font-family: "gotham";
-			font-size: 15px;
+			font-size: 14px;
 			border-bottom: 1px solid black;
 			
 			div{
@@ -75,16 +75,16 @@ text-align: center;
 			}
 
 			.texte5{
-				padding-left: 4px;
+				padding-left: 3px;
 				padding-top: 8px;
 				text-align: center;
 				font-family: "bebasneue-webfont";
-				font-size: 22px;
+				font-size: 20px;
 				color: white;
 			}
 
 			.texte2{
-				margin-left: 10px;
+				margin-left: 7px;
 				margin-bottom: 15px;
 			}
 		}
@@ -116,7 +116,7 @@ text-align: center;
         }
 		
      	.bouton{
-		background-color: #878D8E;
+		background-color: #808080;
 		height:54px;
 		width: 260px;
 		padding-top:15px;
@@ -164,7 +164,7 @@ text-align: center;
 		}
 		
 		.inscriptionface{
-		background-color: #878D8E;
+		background-color: #808080;
 		height:54px;
 		width: 260px;
 		padding-top:15px;
@@ -193,7 +193,7 @@ text-align: center;
 	height: 175px;
 	width: 260px;
     padding: 16px 22px 0px 22px;
-	background-color: #CCC;
+	background-color: #C9C9C9;
 	
 	.texte{
 	position:relative;
@@ -221,7 +221,7 @@ text-align: center;
 	height: 175px;
 	width: 260px;
     padding: 16px 22px 0px 22px;
-	background-color: #CCC;
+	background-color: #C9C9C9;
 	
 	.texte{
 	position:relative;
@@ -249,7 +249,7 @@ text-align: center;
 	height: 175px;
 	width: 260px;
     padding: 16px 22px 0px 22px;
-	background-color: #CCC;
+	background-color: #C9C9C9;
 	
 	.texte{
 	position:relative;
@@ -270,19 +270,19 @@ text-align: center;
   }	
   
   .explanation1:hover {
-    background-color: #3C3C3B;
+    background-color: #808080;
     box-shadow: -3px 3px 15px -4px #000 inset;
 //    .border-radius;
   }
 
   .explanation2:hover {
-    background-color: #3C3C3B;
+    background-color: #808080;
     box-shadow: -3px 3px 15px -4px #000 inset;
 //    .border-radius;
   }
 
   .explanation3:hover {
-    background-color: #3C3C3B;
+    background-color: #808080;
     box-shadow: -3px 3px 15px -4px #000 inset;
 //    .border-radius;
   }
@@ -295,7 +295,7 @@ text-align: center;
 	font-size:18px;
 	height: 29px;
 	width: 333px;
-	background-color: #CCC;
+	background-color: #C9C9C9;
 	font-color: #000000;
 	font-weight: bold;
 	line-height: 30px;
@@ -309,7 +309,7 @@ text-align: center;
 	font-size:18px;
 	height: 29px;
 	width: 333px;
-	background-color: #CCC;
+	background-color: #C9C9C9;
 	font-color: #000000;
 	font-weight: bold;
 	line-height: 30px;
@@ -442,5 +442,32 @@ text-align: center;
 		}
 	}
 	}
+	}
+	
+	#challenge-header{
+		margin-top: 30px;
+		margin-bottom: 40px;
+		font-family: "georgia";
+		font-style: italic;
+		font-weight: bold;
+		font-size: 20px;
+		margin-left:200px;
+
+
+		li {
+	      display: inline-block;
+		  padding-right: 20px;
+				cursor : pointer;
+
+	    }
+
+		.tiret{
+		color: #808080;
+		font-size: 21px;
+		}
+
+	    li.active, li:hover {
+			text-decoration:underline;
+	    }
 	}
 }
