--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -9,7 +9,8 @@
 
 #activities{
 	margin-left: 10px;
-	margin-top: -15px;
+	margin-top: 0px;
+	margin-bottom: 15px;
 	#intro-activities{
 		margin-left: -20px;
 		
@@ -17,7 +18,7 @@
 			height:30px;
 			padding-left: 10px;
 			padding-top: 10px;
-			background-color: #D3D3D3;
+			background-color: #EEE;
 			font-style: italic;
 			font-size: 14px;
 			font-family: "georgia";
@@ -32,7 +33,8 @@
 
 #notifications{
 	margin-left: 10px;
-	margin-top: -15px;
+	margin-top: 0px;
+	margin-bottom: 15px;
 	#intro-notifications{
 		margin-left: -20px;
 		
@@ -49,7 +51,7 @@
 		.action-notification{
 			margin-top: - 30px;
 			padding: 6px;
-			margin-left: 470px;
+			margin-left: 390px;
 			width: 22px;
 			background-color: #808080;
 			font-family: "bebasneue-webfont";
@@ -65,7 +67,7 @@
 		.action-notification2{
 			margin-top: - 30px;
 			padding: 6px;
-			margin-left: 510px;
+			margin-left: 430px;
 			width: 25px;
 			background-color: #808080;
 			font-family: "bebasneue-webfont";
@@ -107,7 +109,7 @@
 }
 
 #profile-badge{
-	background-color: #D3D3D3;
+	background-color: #AAD0FF;
 	width: 170px;
 	min-height: 400px;
 	margin-bottom: 30px;
@@ -171,16 +173,17 @@
 		.boutons-sociaux{
 		font-family: "gotham";
 		font-size: 16px;
+		font-weight: bold;
 		margin-bottom: 15px;
 		
 		.boutons-sociaux2{
-		color: $mainColor;
+		color: white;
 		padding: 5px 10px 5px 10px;
 		background-color: black;
 		}
 		
 		.boutons-sociaux3{
-		color: $mainColor;
+		color: white;
 		padding: 5px 10px 5px 10px;
 		background-color: black;
 		font-size: 15px;
@@ -236,7 +239,7 @@
 #user-badge{
 	margin-left: 75px;
 	width: 170px;
-	background-color: #D3D3D3;
+	background-color: #AAD0FF;
 	margin-bottom: 30px;
 
 	
