--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -3,7 +3,7 @@
 	<div class="row" id="ld-title">
 		
 		<div class="row" id="ld-image-superieure">
-			<%= image_tag "image-ld.png", class: "image"%>
+			<%= image_tag "image-ld-01.png", class: "image"%>
 			<div class="image-sign">
 				<%= image_tag("signe-defi.png", alt: "Moutoners", class: "image2")%>
 			</div>
@@ -116,11 +116,11 @@
 				<div class="row" id="ld-milieu-5">
 					<div class="stat1">
 						<%= @challenge.count_for+@challenge.count_against%>
-						<%= image_tag("icone-debat.png", alt: "Moutoners", class: "image")%>
+						<%= image_tag("icone-debat-3.png", alt: "Moutoners", class: "image")%>
 						|
 				
 						<span class="stat2"><%= @challenge.arguments.count%></span>
-						<%= image_tag("icone-debat-3.png", alt: "Moutoners", class: "image")%>
+						<%= image_tag("icone-debat.png", alt: "Moutoners", class: "image")%>
 						|
 				
 						<span class="stat2"><%= @challenge.comments.count%></span>
