--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -42,7 +42,7 @@
 	}
 	
 	.containant2{
-	margin-left: 430px;
+	margin-left: 435px;
 	margin-top: -133px;
 	height: 133px;
 	margin-bottom: 100px;
@@ -101,7 +101,31 @@
 
 
 #index-groups{
+	
+	#intro-groupe{
 
+	margin-left:0px;
+	margin-top:15px;
+	margin-bottom: 20px;
+	text-align: center;
+	
+	.text1{
+	font-family: "georgia";
+	text-align: center;
+	font-size: 16px;
+	font-weight: bold;
+	font-style: italic;
+	}
+	
+	.text1{
+	font-family: "georgia";
+	text-align: center;
+	font-size: 16px;
+	font-weight: bold;
+	font-style: italic;
+	}
+	}
+	
 	#pousse-droite{
 	margin-left:210px;
 	width: 630px;
