--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -87,7 +87,7 @@
 							<% end %>
 						<% else %>
 							<div class= "moitie-gauche">
-							<div class="pour-truc"><a class="pour-first" href="#">Pour la gauche</a></div>	
+							<div class="pour-truc"><a class="pour-first" href="#"></a></div>	
 						<%end%>
 						</div>
 											
@@ -108,7 +108,7 @@
 							<% end %>
 						<% else %>
 						<div class="moitie-droite">
-						<div class="pour-truc">	<a class="pour-second" href="#">Pour la droite</a></div>
+						<div class="pour-truc">	<a class="pour-second" href="#"></a></div>
 						<%end%>	
 						</div>							
 				</div>
