--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,8 +1,8 @@
 <section id="index-groups">
 	<div class="container">
-		<div class="row">
+		<div class="row" id="intro-groupe">
 			<div class="text1">
-			<%= link_to "créér un groupe", new_group_path%>
+			<%= link_to "créér un groupe", new_group_path, class: "text1"%>
 			</div>
 			<div class="text2">
 				Index des troupeaux
