--- a/app/views/doulins/show.html.erb
+++ b/app/views/doulins/show.html.erb
@@ -63,7 +63,7 @@
 									<% end %>
 								<% else %>
 									<div class= "moitie-gauche">
-									<div class="pour-truc"><a class="pour-first" href="#">Pour la gauche</a></div>	
+									<div class="pour-truc"><a class="pour-first" href="#"></a></div>	
 								<%end%>
 								</div>
 
@@ -84,7 +84,7 @@
 									<% end %>
 								<% else %>
 								<div class="moitie-droite">
-								<div class="pour-truc">	<a class="pour-second" href="#">Pour la droite</a></div>
+								<div class="pour-truc">	<a class="pour-second" href="#"></a></div>
 								<%end%>	
 								</div>
 							</div>
